--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,26 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao' // apply plugin
 android {
-    compileSdkVersion 27
+    compileSdkVersion COMPILE_SDK_VERSION as int
     defaultConfig {
         applicationId "com.afei.bat.afeiframe"
-        minSdkVersion 15
-        targetSdkVersion 27
+        minSdkVersion MIN_SDK_VERSION
+        targetSdkVersion TARGET_SDK_VERSION
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [moduleName: project.getName()]
             }
         }
+    }
+    compileOptions {
+        encoding "UTF-8"
+        //指定jdk版本
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+
     }
     buildTypes {
         release {
@@ -29,27 +36,28 @@ greendao {
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
-    implementation 'com.android.support:design:27.0.0'
-    compile 'com.android.support:cardview-v7:27.0.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation project(':util')
+
+    implementation "androidx.appcompat:appcompat:$SUPPORT_LIB_VERSION"
+    implementation "com.google.android.material:material:$SUPPORT_LIB_VERSION"
+    implementation "androidx.cardview:cardview:$SUPPORT_LIB_VERSION"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
+    implementation "androidx.legacy:legacy-support-v4:$SUPPORT_LIB_VERSION"
+
+    implementation 'com.jakewharton:butterknife:10.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation "io.reactivex.rxjava2:rxjava:2.0.1"
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-    compile 'org.greenrobot:greendao:3.2.2' // add library
+    implementation 'org.greenrobot:greendao:3.2.2' // add library
     // dagger 2 的配置
-    compile 'com.google.dagger:dagger:2.4'
+    implementation 'com.google.dagger:dagger:2.4'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.4'
-    compile 'org.glassfish:javax.annotation:10.0-b28'// 添加java 注解库
+    implementation 'org.glassfish:javax.annotation:10.0-b28'// 添加java 注解库
     //glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
