--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.injected.testOnly=false
+MIN_SDK_VERSION=19
+COMPILE_SDK_VERSION=28
+TARGET_SDK_VERSION=28
+SUPPORT_LIB_VERSION=1.0.0
+android.useAndroidX=true
+android.enableJetifier=true
